# Bachbot

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF_PROMPT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bachbot/: __init__.py  __main__.py  config.py
docs/: architecture.md  benchmark-dashboard.md  complexity-metrics.md  licensing.md  mvp-plan.md  next-chord-benchmark.md  provenance-policy.md  pymusica-integration.md  quality-evaluation.md  quickstart.md  truth-labeling.md
examples/: train_chord_rnn.py
tests/: conftest.py  test_alignment.py  test_analysis.py  test_analysis_regressions.py  test_annotations.py  test_api.py  test_authority_workflow.py  test_bachbench.py  test_bass_independence.py  test_batch_workflow.py  test_benchmark_dashboard.py  test_benchmark_quality.py  test_claims.py  test_complexity_metrics.py  test_composition.py  test_composition_pipeline.py  test_corpus_cli_matrix.py  test_corpus_workflow.py  test_counterpoint.py  test_cross_system.py  test_embeddings.py  test_evaluation.py  test_features.py  test_figured_bass.py  test_figured_bass_realizer.py  test_fugue_pipeline.py  test_harmonic_rhythm.py  test_invention.py  test_jupyter.py  test_lilypond_export.py  test_llm_cli.py  test_manifest_registry.py  test_melody_generator.py  test_midi_export.py  test_modulation_graph.py  test_music21_integration.py  test_next_chord_benchmark.py  test_normalization.py  test_normalize_and_analysis.py  test_operational_readiness.py  (+11 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
(+3169 files in other folders)
