[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bachbot"
version = "0.1.0"
description = "Deterministic, provenance-aware Bach research and composition system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Bachbot Contributors" }
]
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "umap-learn>=0.5.5",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
midi = [
  "mido>=1.3.0",
]
music21 = [
  "music21>=9.1,<10",
]
ml = [
  "torch>=2.1.0",
]
jupyter = [
  "ipython>=7.0",
]
dev = [
  "mido>=1.3.0",
  "pytest>=8.2.0",
]

[project.scripts]
bachbot = "bachbot.cli.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bachbot*"]

[tool.setuptools.package-data]
bachbot = ["llm/prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
